--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "react-router": "^6.21.1",
     "react-router-bootstrap": "^0.26.2",
     "react-router-dom": "^6.21.2",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "styled-components": "^6.1.8",
