--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.6.5",
+    "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.9.2",
+    "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router": "^6.21.1",
