--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "assert": "^2.1.0",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
+    "http-browserify": "^1.7.0",
+    "https-browserify": "^1.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.1",
     "react-dom": "^18.2.0",
@@ -26,7 +29,10 @@
     "react-scripts": "^5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
+    "stream-browserify": "^3.0.0",
     "styled-components": "^6.1.8",
+    "url": "^0.11.3",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
