--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "bootswatch": "^5.3.2",
+    "date-fns": "^3.5.0",
     "http-browserify": "^1.7.0",
     "https-browserify": "^1.0.0",
     "react": "^18.2.0",
